name:                trans-3D
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kosmoskatten/transform-3D-playground#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable trans-3D
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Forward
                       Mat
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , linear
  ghc-options:         -Wall -Werror -O2
